feat: add AI service configuration and update route service implementation